# raycaster

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  map  sprite_map
headers/: constants.h  game.h  sprite.h  utils.h  vector.h
sources/: game.c  main.c  sprite.c  utils.c  vector.c
